--- a/src/app/extrato/extrato.component.html
+++ b/src/app/extrato/extrato.component.html
@@ -1,15 +1,15 @@
-<table>
+<table class="tabela">
   <thead>
-    <th>Data</th>
-    <th>Valor</th>
-    <th>Destinho</th>
+    <th class="tabela__cabecalho__conteudo">Data</th>
+    <th class="tabela__cabecalho__conteudo">Valor</th>
+    <th class="tabela__cabecalho__conteudo">Destinho</th>
   </thead>
 
   <tbody>
-    <tr *ngFor="let transferencia of transferencias">
-      <td>{{transferencia.data | date: "short"}}</td>
-      <td>{{transferencia.valor}}</td>
-      <td>{{transferencia.destino}}</td>
+    <tr class="tabela__linha" *ngFor="let transferencia of transferencias">
+      <td class="tabela__conteudo">{{transferencia.data | date: "short"}}</td>
+      <td class="tabela__conteudo">{{transferencia.valor | currency}}</td>
+      <td class="tabela__conteudo">{{transferencia.destino}}</td>
     </tr>
   </tbody>
 
