--- a/src/app/extrato/extrato.component.html
+++ b/src/app/extrato/extrato.component.html
@@ -5,12 +5,15 @@
     <th class="tabela__cabecalho__conteudo">Destinho</th>
   </thead>
 
-  <tbody>
+  <tbody *ngIf="transferencias?.length >0; else listavazia">
     <tr class="tabela__linha" *ngFor="let transferencia of transferencias">
       <td class="tabela__conteudo">{{transferencia.data | date: "short"}}</td>
       <td class="tabela__conteudo">{{transferencia.valor | currency}}</td>
       <td class="tabela__conteudo">{{transferencia.destino}}</td>
     </tr>
   </tbody>
+  <ng-template #listavazia>
+    <p>Nenhuma Transferencia Cadastrada</p>
+  </ng-template>
 
 </table>
