--- a/src/app/extrato/extrato.component.html
+++ b/src/app/extrato/extrato.component.html
@@ -1,3 +1,6 @@
+
+<section class="container">
+  <h2 class="titulo">Transferencias</h2>
 <table class="tabela">
   <thead>
     <th class="tabela__cabecalho__conteudo">Data</th>
@@ -17,3 +20,4 @@
   </ng-template>
 
 </table>
+</section>
