--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,6 +15,10 @@ header{
   }
 }
 
+main{
+  background-color: #fcfcfc;
+  padding: var(--padding);
+}
 
 // *{
 //   font-family: "Roboto", sans-serif;
