--- a/src/app/extrato/extrato.component.html
+++ b/src/app/extrato/extrato.component.html
@@ -1,6 +1,6 @@
 
 <section class="container">
-  <h2 class="titulo">Transferencias</h2>
+  <h2 class="titulo" style="text-align: center;">Transferencias</h2>
 <table class="tabela">
   <thead>
     <th class="tabela__cabecalho__conteudo">Data</th>
