--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<h1>{{title}}</h1>
-
-<h2>Hello World</h2>
-<img class="img-thumbnail" [src]="url" alt="alt">
+<app-photo.component></app-photo.component>
