--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<ap-photo url='https://img.r7.com/images/moya-leao-branco-albino-atracao-glen-garriff-conservation-lion-sanctuary-23032021161516582?dimensions=768x883'
-description='Leao'></ap-photo>
-<ap-photo url='https://a-static.mlcdn.com.br/618x463/biblia-leao-colorido-letra-grande-naa-san-maquinaria-editorial-sankto/livrariapontocristao/c8e3c040bcc611eb8dcd4201ac18500e/ac20367b1a21850435acd607374559de.jpg'
-description='Leao'></ap-photo>
-
+<ap-photo
+*ngFor="let photo of photos"
+[url]='photo.url'
+[description]='photo.description'
+></ap-photo>
