--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -1,10 +1,2 @@
-<ol class="list-unstyled row">
-  
-  <li *ngFor="let photo of Photos" class="col-4">
-    <ap-photo
-    [url]="photo.url"
-    [description]="photo.description"
-    ></ap-photo>
-  </li>
-
-</ol>
+<ap-photos [Photos] ="Photos" >
+</ap-photos>
