--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -1,2 +1,13 @@
-<ap-photos [Photos] ="Photos" >
-</ap-photos>
+<div class="text-center mt-3 mb-3">
+    <form>
+      <input
+        class="rounded"
+        type="search"
+        placeholder="search"
+        autofocus
+        (keyup) = "filter = $event.target.value">
+    </form>
+</div>
+{{filter}}
+<ap-photos [photos] ="Photos" ></ap-photos>
+
