--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -5,7 +5,9 @@
         type="search"
         placeholder="search"
         autofocus
-        (keyup) = "filter = $event.target.value">
+        (keyup) = "debounce.next($event.target.value)"
+        >
+
     </form>
 </div>
 
